Fix systemd service compatibility and improve documentation
- Fixed CPUSchedulingPolicy and other systemd restrictions causing SETSCHEDULER errors
- Simplified systemd service configurations for better AlmaLinux compatibility
- Added comprehensive 'Comandos Úteis' section to README.md with practical commands
- Fixed broken commands in documentation (logrotate paths, backup directory access)
- Improved install.sh output with better timer status reporting
- Removed confusing/duplicate information from installation process
- All services now install and run correctly without manual intervention

--- a/systemd/freeipa-backup.service
+++ b/systemd/freeipa-backup.service
@@ -14,32 +14,15 @@ StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=freeipa-backup
 
-# Security settings
+# Security settings (simplified for compatibility)
 NoNewPrivileges=true
-ProtectSystem=strict
-ProtectHome=true
 PrivateTmp=true
-PrivateDevices=true
-ProtectKernelTunables=true
-ProtectKernelModules=true
-ProtectControlGroups=true
-RestrictRealtime=true
-RestrictNamespaces=true
-LockPersonality=true
-MemoryDenyWriteExecute=true
-RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
-SystemCallFilter=@system-service
-SystemCallErrorNumber=EPERM
 
 # Allow writing to backup directory and log file
 ReadWritePaths=/var/lib/ipa/backup /var/log /var/run
 
-# Resource limits
+# Resource limits (simplified)
 Nice=10
-IOSchedulingClass=2
-IOSchedulingPriority=4
-CPUSchedulingPolicy=2
-CPUSchedulingPriority=0
 
 # Timeout settings
 TimeoutStartSec=3600
