--- a/systemd/freeipa-backup-cleanup.service
+++ b/systemd/freeipa-backup-cleanup.service
@@ -1,34 +1,34 @@
 [Unit]
 Description=FreeIPA Backup Cleanup Service
-Documentation=file:///usr/local/share/freeipa-backup-automation/README.md
-Wants=network-online.target
-After=network-online.target freeipa-backup.service
+Documentation=file:///opt/sysadmin-scripts/freeipa-backup-automation/README.md
+After=network.target
 
 [Service]
 Type=oneshot
+ExecStart=/opt/sysadmin-scripts/freeipa-backup-automation/backup-cleanup.sh
 User=root
 Group=root
-ExecStart=/usr/local/bin/backup-cleanup.sh
+
+# Security settings
+NoNewPrivileges=true
+ProtectSystem=strict
+ProtectHome=true
+PrivateTmp=true
+PrivateDevices=true
+ProtectKernelTunables=true
+ProtectKernelModules=true
+ProtectControlGroups=true
+RestrictRealtime=true
+SystemCallFilter=@system-service
+SystemCallFilter=~@privileged @resources
+ReadWritePaths=/var/lib/ipa/backup
+ReadWritePaths=/var/log
+ReadWritePaths=/var/run
+
+# Logging
 StandardOutput=journal
 StandardError=journal
 SyslogIdentifier=freeipa-backup-cleanup
-
-# Security settings (simplified for compatibility)
-NoNewPrivileges=true
-PrivateTmp=true
-
-# Allow writing to backup directory and log file
-ReadWritePaths=/var/lib/ipa/backup /var/log
-
-# Resource limits (simplified)
-Nice=15
-
-# Timeout settings
-TimeoutStartSec=1800
-TimeoutStopSec=300
-
-# Restart settings
-Restart=no
 
 [Install]
 WantedBy=multi-user.target
